# peek-core-search

./: .gitignore  README.rst  publish.settings.sh  publish.sh  pyproject.toml  setup.py  sonar-project.properties
peek_core_search/: __init__.py  plugin_package.json
peek_core_search/_private/admin-app/: search.module.ts
peek_core_search/_private/both-app/: search.component.html  search.component.ts  search.component.web.html  search.module.ts
peek_core_search/_private/both-cfg/: search-cfg.component.html  search-cfg.component.ts
peek_core_search/_private/client/: ClientEntryHook.py
peek_core_search/_private/server/: LogicEntryHook.py  ServerEntryHook.py
peek_core_search/_private/storage/: EncodedSearchIndexChunk.py  EncodedSearchObjectChunk.py  ExcludeSearchStringTable.py  SearchIndex.py  (+6 more)
peek_core_search/plugin-module/: SearchResultObjectTuple.ts  SearchService.ts
peek_plugin_search/: __init__.py  plugin_package.json  rename_plugin.sh
peek_plugin_search/_private/: PluginNames.py
peek_plugin_search/doc-admin/: admin_tasks.rst  index.rst  overview.rst
peek_plugin_search/plugin-module/: SearchResultObjectRouteTuple.ts  SearchResultObjectTuple.ts  SearchService.ts  index.ts
peek_plugin_search/server/: SearchApiABC.py
peek_plugin_search/tuples/: ImportSearchObjectRouteTuple.py  ImportSearchObjectTuple.py
peek_plugin_unified_search/: __init__.py  plugin_package.json
peek_plugin_unified_search/_private/: PluginNames.py
peek_plugin_unified_search/plugin-module/: package.json
peek_plugin_unified_search/server/: UnifiedSearchApiABC.py
(+237 files in other folders)
