[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "peek-core-search"
version = "0.0.0"
authors = [{name = "Synerty", email = "contact@synerty.com"}]
description = "Peek Plugin Search - My first enhancement."
keywords = ["Peek", "Python", "Platform", "synerty"]
classifiers = []
dependencies = [
    "peek-plugin-base==0.0.*,>=0.0.0",
    "peek_abstract_chunked_index==0.0.*,>=0.0.0",
]

[project.urls]
Homepage = "https://bitbucket.org/synerty/peek-core-search"
Download = "https://bitbucket.org/synerty/peek-core-search/get/0.0.0.zip"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*.tests"] # *.tests.*; tests.*; tests
namespaces = false
